--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Responsive Website",
   "main": "index.js",
-  "homepage": "https://johnpauldugaojo.github.io/JaypeePortfolio",
+  "homepage": "https://johnpauldugaojo.github.io/JaypeeWeb",
   "scripts": {
     "sass": "node-sass -w scss/ -o dist/css/ --recursive",
     "deploy": "gh-pages -d dist"
